# subscription_app

./: .env.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md  compose.yml
entity/: Cargo.toml
entity/src/: mod.rs  post.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240819_093833_create_user_table.rs  m20240821_140334_create_post_table.rs
postgresql/: create_db.sql
src/: main.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  post_routes.rs  user_routes.rs
src/routes/handlers/: auth_handlers.rs  home_handler.rs  home_handlers.rs  mod.rs  post_handlers.rs  user_handlers.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  environment_variables.rs  global_variables.rs  jwt.rs  mod.rs
