[package]
name = "subscription_app"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ ".", "entity", "migration" ]

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.208", features = ["derive"] }
entity = { path = "entity" }
migration = { path = "migration" }
serde_json = "1.0.125"
env_logger = "0.11.5"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sha256 = "1.5.0"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.22.0"
